Fix word wrap chat - Nic

--- a/app/assets/stylesheets/components/_message.scss
+++ b/app/assets/stylesheets/components/_message.scss
@@ -25,6 +25,8 @@
   border-radius: 3px;
   margin: 0 10px;
   padding: 11px 10px 8px 10px;
+  word-break: break-all;
+
 }
 .avatar {
   width: 42px;
